--- a/EqUiWebUi/Views/Wiki/_GetWiki.cshtml
+++ b/EqUiWebUi/Views/Wiki/_GetWiki.cshtml
@@ -18,3 +18,7 @@
     </div>
     @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "Wiki", new { Area = "", id = Model.Name }), "fas fa-pencil-alt", "", "Edit this wiki", OpenNewWindow: true)
 </div>
+
+<script>
+    initInterface();
+</script>
