--- a/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
+++ b/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
@@ -1,10 +1,19 @@
 ﻿@{
-    ViewBag.Title = ViewBag.sheet;
+    ViewBag.Title = ViewBag.workbook;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @*render the viz*@
-<div id="viz" class="viz"></div>
+<div class="card">
+    <div class="card-header bg-dark text-white">
+        <h4>
+            Tableau workbook: <strong>@ViewBag.workbook</strong>
+            <a class="fas fa-info-circle text-white MyPopovers" data-container="body" data-toggle="popover" data-placement="bottom" href="@Url.Action("_Getwiki", "Wiki", new { area = "", id = ViewBag.workbook}, null)"></a>
+        </h4>
+    </div>
+    @*render the viz*@
+    <div id="viz" class="viz"></div>
+</div>
 
 
 @section scripts{
