--- a/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Screenshots.cshtml
+++ b/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Screenshots.cshtml
@@ -1,7 +1,77 @@
 ﻿@model List<EqUiWebUi.Areas.PlcSupervisie.Models.PlcScreenshot>
 @{
-    ViewBag.Title = "Screenshots";
+    ViewBag.Title = "PlcScreenshot";
 }
 
-<h2>Screenshots</h2>
+<div class="card">
+    <div class="card-header bg-dark text-white">
+        <h4>
+            PLC overview: <strong id="title"></strong>
+        </h4>
+    </div>
+    @*render the viz*@
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+            @foreach (EqUiWebUi.Areas.PlcSupervisie.Models.PlcScreenshot item in Model)
+            {
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="@item.url" alt="@item.Name" title="@item.Name" style="width: 100%; height: 100%;">
+                </div>
+            }
+        </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="fas fa-caret-left fa-6x" style="color:tomato" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="fas fa-caret-right fa-6x" style="color:tomato" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
 
+
+<!--carousel script-->
+<script>
+    //set first item active
+    $('#myCarousel').find('.carousel-item').first().addClass('active')
+    //set title to active item
+    $('#title').html($('#myCarousel').find('.active').find('img').attr("title"));
+    //set carousel to not autoroate
+    $('#myCarousel').carousel({ interval: false });
+    //update title  on carousel next pictue
+    $('#myCarousel').on('slid.bs.carousel', function () {
+        $('#title').html($('#myCarousel').find('.active').find('img').attr("title"));
+        reloadActiveImage();
+    })
+
+    //auto reload active image (add dummy timestamp to break cache)
+    function reloadActiveImage() {
+        var src = $('#myCarousel').find('.active').find('img').attr("src").split('?')[0];
+        $('#myCarousel').find('.active').find('img').attr("src", "")
+        $('#myCarousel').find('.active').find('img').attr("src", src.concat("?").concat(new Date().getTime()));
+    }
+
+    //reload active image 30 seconds
+    setInterval(function () {
+        reloadActiveImage();
+    }, 1000 * 30);
+
+    //full with screen
+    $("#allcontent").removeClass("body-content");
+    $("#allcontent").removeClass("container");
+</script>
+
+
+
+<!--carousel style -->
+<style>
+
+    .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+        width: 100%;
+    }
+
+    .carousel-control.left, .carousel-control.right {
+        background-image: none
+    }
+</style>
