--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -58,6 +58,7 @@
         <div class="card-body">
             @MyHtmlHelpers.EquiLink("http://gensvw2107.gen.volvocars.net/CMACTAPP/", "fas fa-stopwatch", "cmaCTapp", helperText: "Tool van IE om Cycle times te bekijken")
             @MyHtmlHelpers.EquiLink("/PlcSupervisie/Screenshot/Carousel", "far fa-object-group", "Supervisie (UB12)", helperText: "Plc Supervisie voor UB12 (mobile friendly)")
+            @MyHtmlHelpers.EquiLink("/PlcSupervisie/Screenshot/Screenshots", "far fa-object-group", "Supervisie", helperText: "Plc Supervisie GA (in test)")
             @MyHtmlHelpers.EquiLink("/Home/Rendersite?url=" + @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/"), "far fa-object-group", "Supervisie (Greenfield)", helperText: "Tia supervisie schermen")
         </div>
     </div>
