--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -5,8 +5,8 @@
     <div class="card-header bg-light">
         <h6 class="card-title text-black-50">
             Workorders
-            <a class="clickable fas fa-wrench text-black-50" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
-            <a class="clickable far fa-window-restore text-black-50" id="goToWorkordersHyperlink"></a>
+            <a class="clickable fas fa-wrench text-black-50" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover" title="workorder options"></a>
+            <a class="clickable far fa-window-restore text-black-50" id="goToWorkordersHyperlink" data-toggle="tooltip" title="direct link to this view"></a>
             <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h6>
     </div>
@@ -94,16 +94,20 @@
                 //animation
                 $("#placeholderPartial").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
                 //load url in placeholder
-                $("#placeholderPartial").load("@Url.Action("_woDetails", "WorkorderDetails")", { RealtimeConn:  @Model.realtimeConn.ToString().ToLower(), wonum: data["w-o-n-u-m"]});
+                $("#placeholderPartial").load("@Url.Action("_woDetails", "WorkorderDetails")", { RealtimeConn:  @Model.realtimeConn.ToString().ToLower(), wonum: data["w-o-n-u-m"] },
+                    function (responseText, textStatus, req) {
+                        if (textStatus == "error") {
+                            $("#placeholderPartial").html($("#Error", responseText).html());
+                        }
+                    });
             },
             reloadEnded: function () {
                 //simulate click on first row so that the details load automatic IF ROWCOUNT == 1
                 if ($('[data-name="Workorders"]>table>tbody>tr').length == 1) {
-
                     $('[data-name="Workorders"]>table>tbody>tr>td:first').trigger('click');
                 }
                 //subscribe to click event (launch external window)
-                initUrlNewWindow();
+                EnableInterfaceEvents();
             },
             reloadFailed: function (result) {
                 console.log(result);
