--- a/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Screenshots.cshtml
+++ b/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Screenshots.cshtml
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header bg-dark text-white">
         <h4>
-            PLC overview: <strong id="title"></strong>
+            PLC Screenshot: <strong>@Html.DropDownList("Screens", null, htmlAttributes: new { @class = "selectpicker col-6" })</strong>
         </h4>
     </div>
     @*render the viz*@
@@ -15,16 +15,16 @@
             @foreach (EqUiWebUi.Areas.PlcSupervisie.Models.PlcScreenshot item in Model)
             {
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="@item.url" alt="@item.Name" title="@item.Name" style="width: 100%; height: 100%;">
+                    <img class="d-block img-fluid" src="@item.url" alt="@item.Name" title="@item.Name"  style="width: 80%; height: 100%;">
                 </div>
             }
         </div>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="fas fa-caret-left fa-6x" style="color:tomato" aria-hidden="true"></span>
+            <span class="fas fa-caret-left fa-6x" style="color:rgba(255, 99, 71, 0.26)" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="fas fa-caret-right fa-6x" style="color:tomato" aria-hidden="true"></span>
+            <span class="fas fa-caret-right fa-6x" style="color:rgba(255, 99, 71, 0.26)" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
@@ -36,12 +36,12 @@
     //set first item active
     $('#myCarousel').find('.carousel-item').first().addClass('active')
     //set title to active item
-    $('#title').html($('#myCarousel').find('.active').find('img').attr("title"));
-    //set carousel to not autoroate
+    $("#Screens").val($('#myCarousel').find('.active').find('img').attr("title")).change();
+    //set carousel to not auto rotate
     $('#myCarousel').carousel({ interval: false });
-    //update title  on carousel next pictue
+    //update title  on carousel next picture
     $('#myCarousel').on('slid.bs.carousel', function () {
-        $('#title').html($('#myCarousel').find('.active').find('img').attr("title"));
+        $("#Screens").val($('#myCarousel').find('.active').find('img').attr("title")).change();
         reloadActiveImage();
     })
 
@@ -57,21 +57,14 @@
         reloadActiveImage();
     }, 1000 * 30);
 
+    //listen to dropdown changes
+    $('#Screens').change(function () {
+        console.log($("#Screens").val());
+    });
+
     //full with screen
     $("#allcontent").removeClass("body-content");
     $("#allcontent").removeClass("container");
 </script>
 
 
-
-<!--carousel style -->
-<style>
-
-    .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-        width: 100%;
-    }
-
-    .carousel-control.left, .carousel-control.right {
-        background-image: none
-    }
-</style>
