--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index Qteam";
+   
 }
 
 <div class="jumbotron">
@@ -87,7 +88,11 @@
             <a href="~/Welding/StoringsIngave/Index" class="btn btn-primary btn-sm">StoringsIngave&raquo;</a>
             Beheer van de StoringsIngaven
             </p>
-         
+            </p>
+            <a href="~/Welding/HiddenSpot/Index" class="btn btn-primary btn-sm">spot config&raquo;</a>
+            Beheer van de Hidden Spots, geoSpots, left/right spots
+            </p>
+
 
 
         </div>
@@ -95,7 +100,5 @@
 </div>
 </div>
 
-
-</div>
 <p></p>
 
