--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -81,3 +81,11 @@
     SQL host <strong>@ViewBag.sqlserver</strong>
     Build  <strong>@ViewBag.build</strong>
 </div>
+
+<hr />
+<div class="card card-body">
+    <h3>Equi instances</h3>
+    <hr />
+    @MyHtmlHelpers.EquiLink("https://gensvw1178.gen.volvocars.net", "fas fa-flag", "VCG", helperText: "Volvo cars Ghent")
+    @MyHtmlHelpers.EquiLink("http://chasvw1203.cha.volvocars.net", "fas fa-flag", "VCCH", helperText: "Volvo cars Charleston")
+</div>
