--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -5,7 +5,6 @@
     <div class="card-header bg-light">
         <h6 class="card-title text-black-50">
             Workorders
-            <a class="clickable fas fa-wrench text-black-50" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover" title="workorder options"></a>
             <a class="clickable far fa-window-restore text-black-50" id="goToWorkordersHyperlink" data-toggle="tooltip" title="direct link to this view"></a>
             <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h6>
@@ -15,39 +14,8 @@
     </div>
 </div>
 
-
-@*popover content*@
-<div class="d-none" id="workorderOnLocationPopoverContent">
-    <div class="card">
-        <div class="card-body">
-            <div class="form-group">
-                <div class="form-group">
-                    @Html.LabelFor(m => m.b_ciblings, new { @class = "control-label col-6" })
-                    <div class="col-6">
-                        @Html.CheckBoxFor(m => m.b_ciblings, new { @class = "form-control input-md" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(m => m.b_preventive, new { @class = "control-label col-6" })
-                    <div class="col-6">
-                        @Html.CheckBoxFor(m => m.b_preventive, new { @class = "form-control input-md" })
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
     <!--_workorderOnLocation-->
     <script>
-    //enable popover for settings.
-    $("#workorderOnLocationPopover").popover({
-        html: true,
-        content: function () {
-            return $('#workorderOnLocationPopoverContent').html();
-        },
-    });
     //build query string
     function workorderOnLocationGridUrlParms() {
         var result = "&location= @Url.Encode(Model.location)" +
@@ -60,8 +28,7 @@
             "&status=@Url.Encode(Model.status)" +
             "&ownergroup=@Url.Encode(Model.ownergroup)" +
             "&startdate=@Model.startdate.ToString("yyyy-MM-dd HH:mm:ss")" +
-            "&enddate=@Model.enddate.ToString("yyyy-MM-dd HH:mm:ss")" +
-            "&RealtimeConn=@Model.realtimeConn"
+            "&enddate=@Model.enddate.ToString("yyyy-MM-dd HH:mm:ss")" 
         return result;
     }
 // set url to link back to main workorder view
@@ -117,13 +84,4 @@
     }
 //init grid
     loadWorkorderOnLocationGrid();
-    //subscrible to option checkbox click event
-    $('#b_ciblings').click(function () {
-        loadWorkorderOnLocationGrid();
-    });
-
-    $('#b_preventive').click(function () {
-        loadWorkorderOnLocationGrid();
-    });
-
   </script>
