--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/SubWoDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/SubWoDetails.cshtml
@@ -1,5 +1,4 @@
-﻿@model EqUiWebUi.WebGridHelpers.DefaultModel
-@{
+﻿@{
     ViewBag.Title = "SubWoDetails";
 }
 <h4>WoDetails @ViewBag.parentwonum (inc childeren)</h4>
@@ -10,7 +9,11 @@
     @*run on doc ready *@
     $(document).ready(function () {
         $("#woDetailsPartial").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
-        var url = "@Url.Action("_SubWoDetails", "WorkorderDetails")?parentwonum=" + @ViewBag.parentwonum + "&RealtimeConn=" + @ViewBag.RealtimeConn.ToString().ToLower();
-        $("#woDetailsPartial").load(url);
+        $("#woDetailsPartial").load("@Url.Action("_SubWoDetails", "WorkorderDetails",new { parentwonum = ViewBag.parentwonum })",
+            function (responseText, textStatus, req) {
+                if (textStatus == "error") {
+                    $("#placeholderPartial").html($("#Error", responseText).html());
+                }
+            });
     })
 </script>
