--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woDetails.cshtml
@@ -59,21 +59,17 @@
 
 <div id="SubWodetails"></div>
 
-@*inform user that this is a realtime connection*@
-@if (ViewBag.RealtimeConn)
-{
-    <div class="badge badge-pill badge-warning">
-        RT
-    </div>
-}
-
 <!--Get subworkorders-->
 @if (ViewBag.RenderSubwo)
 {
 <script type="text/javascript">
     //load url in placeholder
     $("#SubWodetails").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading subworkorders....</div>");
-    var url = "@Url.Action("_SubWoDetails", "WorkorderDetails")?RealtimeConn=@ViewBag.RealtimeConn&parentwonum=@ViewBag.wonum";
-    $("#SubWodetails").load(url);
+    $("#SubWodetails").load("@Url.Action("_SubWoDetails", "WorkorderDetails", new { parentwonum = @ViewBag.wonum } )",
+        function (responseText, textStatus, req) {
+            if (textStatus == "error") {
+                $("#placeholderPartial").html($("#Error", responseText).html());
+            }
+        });
 </script>
 }
