--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
@@ -147,8 +147,8 @@
             'Last 100 Days': [moment().subtract(100, 'days'), moment()],
             'Last Year': [moment().subtract(365, 'days'), moment()]
         },
-        "startDate": moment('@Model.startdate.ToString("o")'),
-        "endDate": moment('@Model.enddate.ToString("o")'),
+        "startDate": moment('@Model.startdate.GetValueOrDefault().ToString("o")'),
+        "endDate": moment('@Model.enddate.GetValueOrDefault().ToString("o")'),
       //  "opens": "left",
       //  "drops": "up"
     }, function (start, end, label) {
@@ -172,10 +172,5 @@
             $("#WorkorderSelectOptions").trigger("click");
         }
 
-        //check if we need to go full screen mode
-        var fullscreen = @(Json.Encode(ViewBag.fullscreen ?? false));
-        if (fullscreen == true) {
-            $("#fullscreenNav").trigger("click");
-        }
     });
 </script>
