--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -85,12 +85,15 @@
             <a href="~/Welding/ULplan_start/Index" class="btn btn-primary btn-sm">Plan Busy&raquo;</a>
             Beheer van de DB plan busy list
             </p>
-            <a href="~/Welding/StoringsIngave/Index" class="btn btn-primary btn-sm">StoringsIngave&raquo;</a>
-            Beheer van de StoringsIngaven
+            <a href="~/Welding/StoringsIngave/Index" class="btn btn-primary btn-sm">StoringsIngave ===test===&raquo;</a>
+            Beheer van de StoringsIngaven ===test===
             </p>
-            </p>
+
             <a href="~/Welding/HiddenSpot/Index" class="btn btn-primary btn-sm">spot config&raquo;</a>
             Beheer van de Hidden Spots, geoSpots, left/right spots
+            </p>
+            <a href="~/Welding/UltralogInspections/Index" class="btn btn-primary btn-sm">Change last ultralogmeasure&raquo;</a>
+            Beheer de laatste ultralogmetingen van de afgelopen 24 uur
             </p>
 
 
