--- a/EqUiWebUi/Areas/Welding/Views/UltralogInspections/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/UltralogInspections/Index.cshtml
@@ -4,79 +4,49 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>change ultralogData if needed from the last 24 hours</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.InspectionTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.InspectorComment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MeasuredThickness)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IndexOfTestSeq)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TotalThickness)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlanLenght)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Inspectionplan.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UltralogStations.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Users.CDSID)
-        </th>
-        <th></th>
-    </tr>
+@Html.Grid(Model).Named("UltralogInspections").Build(columns =>
+{
+    columns.Add(c => c.ID).Titled("id");
+    columns.Add(c => c.InspectionTime).Titled("inspectiontime").Css("bolded").InitialSort(GridSortOrder.Desc); 
+    columns.Add(c => c.Inspectionplan.Name).Titled("plan");
+    columns.Add(c => c.IndexOfTestSeq).Titled("plannumber");
+    columns.Add(c => c.PlanLenght).Titled("planlenght");
+    columns.Add(c => c.Users.CDSID).Titled("inspector");
+    columns.Add(c => c.InspectorComment).Titled("comment");
+    columns.Add(c => c.OK).Titled("okspot");
+    columns.Add(c => c.Loose).Titled("loose");
+    columns.Add(c => c.SmallNugget).Titled("smallnugget");
+    columns.Add(c => c.StickWeld).Titled("stickweld");
+    columns.Add(c => c.BadTroughWeld).Titled("BadTroughWeld");
 
-@foreach (var item in Model) {
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.InspectionTime)
-        </th>
-        <th>
-        <td>
-            @Html.DisplayFor(modelItem => item.InspectorComment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MeasuredThickness)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IndexOfTestSeq)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalThickness)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PlanLenght)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Inspectionplan.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UltralogStations.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Users.CDSID)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
+    //tools
+    columns.Add(c => c)
+                        .Titled("")
+                        .Encoded(false)
+                        .RenderedAs(c =>
+
+                        MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.ID }), "fas fa-pencil-alt", "", "Edit this spot").ToHtmlString() +
+                        MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.ID }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString()
+
+
+                        ).Filterable(false);
+
+
+
+}).Filterable().Pageable(pager =>
+{
+    pager.RowsPerPage = 20;
+
 }
+        ).Sortable().Css("table-hover")
 
-</table>
+@section scripts{
+    <script>
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+    </script>
+
+}
