small fix in maximo ui (querystring as json) and sorting

--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
@@ -179,11 +179,11 @@
                 // Boolean - Whether to use UTC dates instead local
                 useUtc: true,
                 // String - short date format (used for scale labels)
-                scaleDateFormat: "mm-dd",
+                scaleDateFormat: "dd/mm",
                 // String - short time format (used for scale labels)
                 scaleTimeFormat: "HH:MM",
                 // String - full date format (used for point labels)
-                scaleDateTimeFormat: "yy-mm-dd HH:MM:ss",
+                scaleDateTimeFormat: "dd/mm/yy HH:MM:ss",
                 //for resize
                 maintainAspectRatio: false,
                 responsive: true
