--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -16,23 +16,33 @@
 
     <!--_workorderOnLocation-->
     <script>
-    //build query string
+    //build query string first as json remove empty parms to make urls cleaner than to string
     function workorderOnLocationGridUrlParms() {
-        var result = "&location= @Url.Encode(Model.location)" +
-            "&locancestor=@Url.Encode(Model.locancestor)" +
-            "&b_ciblings=" + $('#b_ciblings').is(':checked')  +
-            "&b_preventive=" + $('#b_preventive').is(':checked') +
-            "&jpnum=@Url.Encode(Model.jpnum)" +
-            "&worktype=@Url.Encode(Model.worktype)" +
-            "&wonum=@Url.Encode(Model.wonum)" +
-            "&status=@Url.Encode(Model.status)" +
-            "&ownergroup=@Url.Encode(Model.ownergroup)" +
-            "&startdate=@Model.startdate.GetValueOrDefault().ToString("yyyy-MM-dd HH:mm:ss")" +
-            "&enddate=@Model.enddate.GetValueOrDefault().ToString("yyyy-MM-dd HH:mm:ss")" 
-        return result;
-    }
+        var result = {
+            location : "@Model.location", 
+            locancestor : "@Model.locancestor", 
+            b_ciblings : $('#b_ciblings').is(':checked'), 
+            b_preventive : $('#b_preventive').is(':checked'),
+            jpnum : "@Model.jpnum",
+            worktype : "@Model.worktype",
+            wonum : "@Model.wonum",
+            status : "@Model.status",
+            ownergroup : "@Model.ownergroup",
+            startdate : "@Model.startdate.GetValueOrDefault().ToString("yyyy-MM-dd HH:mm:ss")",
+            enddate : "@Model.enddate.GetValueOrDefault().ToString("yyyy-MM-dd HH:mm:ss")"
+        }
+        console.log(result);
+        var cleanresult = $.each(result, function (key, value) {
+            if (value === "" || value === null || value === "0001-01-01 00:00:00") {
+                delete result[key];
+            }
+        });
+        var querystring = jQuery.param(cleanresult);
+        return querystring;
+        }
+
 // set url to link back to main workorder view
-    $('#goToWorkordersHyperlink').attr('href', '@Url.Action("Workorders")?' + workorderOnLocationGridUrlParms() + "&loadOnInit=true");
+        $('#goToWorkordersHyperlink').attr('href', '@Url.Action("Workorders")?' + workorderOnLocationGridUrlParms() + "&loadOnInit=true");
 //render grid and subscrible to row clicked events
     function loadWorkorderOnLocationGrid() {
         $('[data-name= "Workorders"]').html("<i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i>");
